--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -90,6 +90,7 @@
     </Compile>
     <Compile Include="Tests\BaronBladeTest.cs" />
     <Compile Include="Tests\HakaTest.cs" />
+    <Compile Include="Tests\LegacyTest.cs" />
     <Compile Include="Tests\ObjectMother.cs" />
     <Compile Include="Tests\UtilityTest.cs" />
     <Compile Include="Tests\MinionTest.cs" />
