--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -173,9 +173,9 @@
     <Resource Include="Images\Graveyard.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\Hero\Haka\Dominion.png" />
+    <Content Include="Images\Hero\Haka\3-Dominion.png" />
     <Resource Include="Images\Hero\Legacy\BackfistStrike.png" />
-    <Resource Include="Images\Hero\Legacy\100-BolsterAllies.png" />
+    <Resource Include="Images\Hero\Legacy\BolsterAllies.png" />
     <Resource Include="Images\Hero\Legacy\DangerSense.png" />
     <Resource Include="Images\Hero\Legacy\FlyingSmash.png" />
     <Resource Include="Images\Hero\Legacy\Fortitude.png" />
@@ -196,9 +196,9 @@
     <Resource Include="Images\Hero\Haka\NonPlayable\haka_back.png" />
     <Resource Include="Images\Hero\Haka\NonPlayable\haka_death.png" />
     <Resource Include="Images\Hero\Haka\NonPlayable\haka_hero.png" />
-    <Resource Include="Images\Hero\Haka\Mere.png" />
-    <Resource Include="Images\Hero\Haka\Rampage.png" />
-    <Resource Include="Images\Hero\Haka\Taiaha.png" />
+    <Resource Include="Images\Hero\Haka\3-Mere.png" />
+    <Resource Include="Images\Hero\Haka\3-Rampage.png" />
+    <Resource Include="Images\Hero\Haka\3-Taiaha.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Icons\bb_cover.png" />
@@ -206,53 +206,53 @@
     <Resource Include="Images\Icons\haka_cover.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Environment\InsulaPrimus\EnragedTRex.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\ObsidianField.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\PrimordialPlantLife.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\PterodactylThief.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\RiverOfLava.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\VelociraptorPack.png" />
-    <Resource Include="Images\Environment\InsulaPrimus\VolcanicEruption.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\2-EnragedTRex.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\3-ObsidianField.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\2-PrimordialPlantLife.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\2-PterodactylThief.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\2-RiverOfLava.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\3-VelociraptorPack.png" />
+    <Resource Include="Images\Environment\InsulaPrimus\1-VolcanicEruption.png" />
     <Resource Include="Images\Environment\InsulaPrimus\NonPlayable\insula_primus_back.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Data\NumOfCards.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Villain\BaronBlade\BacklashField.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-BacklashField.png" />
     <Resource Include="Images\Villain\BaronBlade\NonPlayable\BaronBlade_back.png" />
     <Resource Include="Images\Villain\BaronBlade\NonPlayable\BaronBlade_death.png" />
     <Resource Include="Images\Villain\BaronBlade\NonPlayable\BaronBlade_initial.png" />
     <Resource Include="Images\Villain\BaronBlade\NonPlayable\BaronBlade_instr_back.png" />
     <Resource Include="Images\Villain\BaronBlade\NonPlayable\BaronBlade_instr_front.png" />
-    <Resource Include="Images\Villain\BaronBlade\BladeBattalion.png" />
-    <Resource Include="Images\Villain\BaronBlade\ConsiderThePriceOfVictory.png" />
-    <Resource Include="Images\Villain\BaronBlade\DeviousDisruption.png" />
-    <Resource Include="Images\Villain\BaronBlade\ElementalRedistributor.png" />
-    <Resource Include="Images\Villain\BaronBlade\FleshRepairNanites.png" />
-    <Resource Include="Images\Villain\BaronBlade\HastenDoom.png" />
-    <Resource Include="Images\Villain\BaronBlade\LivingForceField.png" />
-    <Resource Include="Images\Villain\BaronBlade\MobileDefensePlatform.png" />
-    <Resource Include="Images\Villain\BaronBlade\PoweredRemoteTurret.png" />
-    <Resource Include="Images\Villain\BaronBlade\SlashAndBurn.png" />
+    <Resource Include="Images\Villain\BaronBlade\4-BladeBattalion.png" />
+    <Resource Include="Images\Villain\BaronBlade\1-ConsiderThePriceOfVictory.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-DeviousDisruption.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-ElementalRedistributor.png" />
+    <Resource Include="Images\Villain\BaronBlade\1-FleshRepairNanites.png" />
+    <Resource Include="Images\Villain\BaronBlade\4-HastenDoom.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-LivingForceField.png" />
+    <Resource Include="Images\Villain\BaronBlade\3-MobileDefensePlatform.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-PoweredRemoteTurret.png" />
+    <Resource Include="Images\Villain\BaronBlade\2-SlashAndBurn.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Hero\Haka\ElbowSmash.png" />
-    <Resource Include="Images\Hero\Haka\EnduringIntercession.png" />
-    <Resource Include="Images\Hero\Haka\GroundPound.png" />
-    <Resource Include="Images\Hero\Haka\HakaOfBattle.png" />
-    <Resource Include="Images\Hero\Haka\HakaOfRestoration.png" />
-    <Resource Include="Images\Hero\Haka\HakaOfShielding.png" />
+    <Resource Include="Images\Hero\Haka\3-ElbowSmash.png" />
+    <Resource Include="Images\Hero\Haka\3-EnduringIntercession.png" />
+    <Resource Include="Images\Hero\Haka\2-GroundPound.png" />
+    <Resource Include="Images\Hero\Haka\3-HakaOfBattle.png" />
+    <Resource Include="Images\Hero\Haka\3-HakaOfRestoration.png" />
+    <Resource Include="Images\Hero\Haka\3-HakaOfShielding.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Hero\Haka\PunishTheWeak.png" />
+    <Resource Include="Images\Hero\Haka\3-PunishTheWeak.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Hero\Haka\SavageMana.png" />
+    <Resource Include="Images\Hero\Haka\2-SavageMana.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Hero\Haka\TaMoko.png" />
-    <Resource Include="Images\Hero\Haka\VitalitySurge.png" />
+    <Resource Include="Images\Hero\Haka\3-TaMoko.png" />
+    <Resource Include="Images\Hero\Haka\3-VitalitySurge.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
