--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -58,6 +58,7 @@
     </ApplicationDefinition>
     <Compile Include="CardNotFoundException.cs" />
     <Compile Include="Data\Effects\CardDrawingEffects.cs" />
+    <Compile Include="Data\Effects\HealEffects.cs" />
     <Compile Include="Data\Effects\DamageEffects.cs" />
     <Compile Include="Data\Handlers\DiscardListener.cs" />
     <Compile Include="Data\Heroes\Legacy.cs" />
