--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CardNotFoundException.cs" />
+    <Compile Include="Data\DiscardedActionDataObject.cs" />
     <Compile Include="DiscardFromBoard.xaml.cs">
       <DependentUpon>DiscardFromBoard.xaml</DependentUpon>
     </Compile>
