punish the weak completed

--- a/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
+++ b/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse/SentinelsOfTheMultiverse.csproj
@@ -58,6 +58,7 @@
     </ApplicationDefinition>
     <Compile Include="CardNotFoundException.cs" />
     <Compile Include="Data\DiscardedActionDataObject.cs" />
+    <Compile Include="Data\Targetable.cs" />
     <Compile Include="DiscardFromBoard.xaml.cs">
       <DependentUpon>DiscardFromBoard.xaml</DependentUpon>
     </Compile>
